--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,7 +12,7 @@ body {
 	font-family: 'Poppins', sans-serif;
 }
 
-.button {
+#button {
   border: none;
   color: white;
   padding: 15px 32px;
@@ -29,7 +29,7 @@ body {
 	to {top: 15%; opacity: 100%;}
 }
 
-.button1 
+#button1 
 {
 	top: 15%;
 	left: 50%;
