--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,13 +29,17 @@ body {
 	to {top: 15%; opacity: 100%;}
 }
 
-#button1 
+#button1:hover 
 {
 	top: 15%;
 	left: 50%;
 	position: fixed;
+	padding: 32px 16px;
+	border-radius: 8px;
 	background-color: #D9320E;
+	border: 2px solid #000000;
 	display: flex;
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 	animation-name: slidefromdown8;
 	animation-duration: 2s;
 }
