--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,16 +12,18 @@ body {
 	font-family: 'Poppins', sans-serif;
 }
 
-#button {
+.button {
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 12px 28px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 20px;
   margin: 4px 2px;
   cursor: pointer;
+  animation-name: slidefromdown8;
+  animation-duration: 2s;
 }
 
 @keyframes slidefromdown8 {
@@ -29,20 +31,6 @@ body {
 	to {top: 15%; opacity: 100%;}
 }
 
-#button1:hover 
-{
-	top: 15%;
-	left: 50%;
-	position: fixed;
-	padding: 32px 16px;
-	border-radius: 8px;
-	background-color: #D9320E;
-	border: 2px solid #000000;
-	display: flex;
-	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-	animation-name: slidefromdown8;
-	animation-duration: 2s;
-}
 
 #landingtitlte {
 	top: 30%;
