--- a/src/css/main.css
+++ b/src/css/main.css
@@ -30,9 +30,10 @@ body {
 }
 
 .button1 {
-	  background-color: #555555;
 	  top: 15%;
-  	  left: 50%;}
+  	  left: 50%;
+	  background-color: #555555;
+	  }
 
 @keyframes slidefromdown8 {
 	from {top: 90%; opacity: 0%;}
