--- a/src/css/main.css
+++ b/src/css/main.css
@@ -21,7 +21,7 @@ body {
   padding: 12px 28px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: flex;
   font-size: 20px;
   margin: 4px 2px;
   cursor: pointer;
