--- a/src/css/main.css
+++ b/src/css/main.css
@@ -34,6 +34,8 @@ body {
   	  left: 50%;
 	  background-color: #555555;
 	  border-radius: 8px;
+	  justify-content: center;
+	  display: flex
 	  }
 
 @keyframes slidefromdown8 {
