--- a/src/css/main.css
+++ b/src/css/main.css
@@ -38,6 +38,13 @@ body {
 	  display: flex
 	  }
 
+.container {  
+width: 100px;  
+height: 50px;  
+border: 5px #FF0000;  
+display: grid;  
+}  
+
 @keyframes slidefromdown8 {
 	from {top: 90%; opacity: 0%;}
 	to {top: 15%; opacity: 100%;}
