--- a/src/css/main.css
+++ b/src/css/main.css
@@ -35,11 +35,14 @@ body {
 	  background-color: #555555;
 	  border-radius: 8px;
 	  justify-content: center;
-	  display: flex
+	  display: flex;
+	  margin: auto;
 	  }
 
-.container {  
-width: 100px;  
+.container {
+top: 15%;
+left: 50%;
+width: 50px;  
 height: 50px;  
 border: 5px #FF0000;  
 display: grid;  
