--- a/src/css/main.css
+++ b/src/css/main.css
@@ -46,7 +46,11 @@ width: 100px;
 height: 50px;  
 border: 5px #FF0000;  
 display: grid;  
-}  
+} 
+
+.center {
+text-align: center;
+}
 
 @keyframes slidefromdown8 {
 	from {top: 90%; opacity: 0%;}
