--- a/src/css/main.css
+++ b/src/css/main.css
@@ -43,9 +43,10 @@ body {
 top: 15%;
 left: 50%;
 width: 100px;  
-height: 50px;  
+height: 100px;  
 border: 5px #FF0000;  
-display: grid;  
+display: grid;
+text-align: center;
 } 
 
 .center {
