--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,8 +2,8 @@
 
 :root {
 	--primary-color: #FF0000;
-	--secondary-color: #70ABAF;
-	--back-color: #FF0000;
+	--secondary-color: #FF0000;
+	--back-color: #555555;
 }
 
 body {
