--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 :root {
-	--primary-color: #FF0000;
+	--primary-color: #555555;
 	--secondary-color: #FF0000;
 	--back-color: #555555;
 }
@@ -44,7 +44,7 @@ top: 15%;
 left: 50%;
 width: 100px;  
 height: 100px;  
-border: 5px #FF0000;  
+border: 5px #555555;  
 display: grid;
 text-align: center;
 } 
