--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,7 +16,7 @@ body {
   top: 15%;
   left: 50%;
   border: none;
-  background-color: #555555;
+  background-color: #FF0000;
   color: white;
   padding: 12px 28px;
   text-align: center;
@@ -63,6 +63,7 @@ text-align: center;
 	top: 30%;
 	left: 50%;
 	font-size: 50px;
+	color: #FF0000;
 	position: fixed;
 	transform: translate(-50%, -50%);
 	display: flex;
@@ -79,6 +80,7 @@ text-align: center;
 	top: 40%;
 	left: 50%;
 	font-size: 25px;
+	color: #FF0000;
 	position: fixed;
 	transform: translate(-50%, -50%);
 	display: flex;
@@ -95,6 +97,7 @@ text-align: center;
 	top: 50%;
 	left: 50%;
 	font-size: 25px;
+	color: #FF0000;
 	position: fixed;
 	transform: translate(-50%, -50%);
 	display: flex;
@@ -111,6 +114,7 @@ text-align: center;
 	top: 60%;
 	left: 50%;
 	font-size: 20px;
+	color: #FF0000;
 	position: fixed;
 	transform: translate(-50%, -50%);
 	display: flex;
@@ -127,6 +131,7 @@ text-align: center;
 	top: 70%;
 	left: 50%;
 	font-size: 25px;
+	color: #FF0000;
 	position: fixed;
 	transform: translate(-50%, -50%);
 	display: flex;
