--- a/src/css/main.css
+++ b/src/css/main.css
@@ -148,6 +148,7 @@ text-align: center;
 	top: 80%;
 	left: 45%;
 	font-size: 25px;
+	color: #FF0000;
 	position: fixed;
 	transform: translate(-50%, -50%);
 	display: flex;
@@ -164,6 +165,7 @@ text-align: center;
 	top: 80%;
 	left: 50%;
 	font-size: 25px;
+	color: #FF0000;
 	position: fixed;
 	transform: translate(-50%, -50%);
 	display: flex;
@@ -175,6 +177,7 @@ text-align: center;
 	top: 80%;
 	left: 55%;
 	font-size: 25px;
+	color: #FF0000;
 	position: fixed;
 	transform: translate(-50%, -50%);
 	display: flex;
@@ -186,6 +189,7 @@ text-align: center;
 	top: 90%;
 	left: 50%;
 	font-size: 23px;
+	color: #FF0000;
 	position: fixed;
 	transform: translate(-50%, -50%);
 	display: flex;
